deployment/cloud/ap/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yb-e2e-demo
  name: yb-e2e-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yb-e2e-demo
  strategy: {}
  template:
    metadata:
      labels:
        app: yb-e2e-demo
    spec:
      containers:
        - image: gcr.io/yogendra/yb-e2e-demo:latest
          name: yb-e2e-demo
          resources: {}
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: yb-e2e-demo
spec:
  selector:
    app: yb-e2e-demo
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yb-e2e-demo
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "west-dss2022-ingress"
spec:
  rules:
    - host: yb-e2e-demo.west.dss2022.yuga.ga
      http:
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: yb-e2e-demo
                port:
                  name: http
